--- a/playground/router.html
+++ b/playground/router.html
@@ -7,20 +7,58 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <div>
+            <!-- Router View에서 사용하는 Navi Tag ex) a Tag -->
+            <router-link to="/login">Login</router-link>
+            <router-link to="/main">Main</router-link>
+        </div>
+        <!-- View Instance 에 Router 를 연결해야 사용할 수 있는 Router View -->
+        <!-- 아래에 Router Instance에서 정의한 Component가 보임 -->
+        <router-view></router-view>
+    </div>
 
     <!-- Vue, Vue Router Script 순서도 중요! -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router@3.5.3/dist/vue-router.js"></script>
     <script>
+        // Router View
+        var LoginComponent = {
+            template: '<div>login</div>'
+        };
+
+        var MainComponent = {
+            template: '<div>main</div>'
+        };
+
+        /* What is a Router?
+            라우터는 둘 이상의 패킷 전환 네트워크 또는 서브네트워크를 연결하는 장치.
+            !연결 그룹망!
+        */
+
         // 아래 Vue Instance와 연결 하는 라우터
         var Router = new VueRouter({
-
+            mode: 'history',
+            // Page의 Routing 정보를 넣는 Option (배열로 담김)
+            routes: [
+                // page의 갯수만큼 객체가 필요함.
+                {// 로그인 페이지 객체
+                    // 페이지의 url
+                    path: '/login',
+                    name: 'login',
+                    // 해당 url에서 표시될 컴포넌트 (무조건 단일)
+                    component: LoginComponent
+                }, 
+                {// 메인 페이지 객체
+                    path: '/main',
+                    component: MainComponent
+                } 
+            ]
         });
 
         new Vue({
             el: '#app',
-            router: Router  // 위에서 정의한 Router Instance을 Vue Instance에 있는 router option에 대입
+            router: Router,  // 위에서 정의한 Router Instance을 Vue Instance에 있는 router option에 대입
         });
     </script>
 </body>
